fix: 處理 article add stream造成的 ConcurrentModificationException